--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "nuxt": "^2.3.4",
-    "express": "^4.16.4",
+    "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "bootstrap": "^4.1.3"
+    "cross-env": "^5.2.0",
+    "express": "^4.16.4",
+    "nuxt": "^2.3.4",
+    "vue-burger-menu": "^2.0.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
