--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "nuxt": "^2.3.4",
-    "vue-burger-menu": "^2.0.0"
+    "vue-burger-menu": "^2.0.0",
+    "vue-formio": "^3.0.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
